# enpm702-summer-2025

./: .gitignore  CMakeLists.txt  README.md
doxygen/: Doxyfile
lecture1/src/: lecture1.cpp
lecture2/src/: lecture2.cpp
lecture3/src/: lecture3.cpp
lecture4/src/: lecture4.cpp
lecture5/include/: lecture5.hpp
lecture5/src/: lecture5.cpp  main.cpp
lecture6/include/: utils.hpp
lecture6/src/: lecture6.cpp  utils.cpp
lecture7/doc/design/modeling/diagrams/: battery_sequence_diagram.plantuml  carrier_robot_sequence_diagram.plantuml  class_diagram.plantuml  scanner_robot_sequence_diagram.plantuml  sorter_robot_sequence_diagram.plantuml
lecture7/include/: robot.hpp  support.hpp
lecture7/src/: main.cpp  robot.cpp
lecture8/doc/: composition.plantuml
lecture8/doc/diagrams/: aggregation.plantuml  base_derived.plantuml  multiple_inheritance.plantuml  single_inheritance.plantuml
lecture8/include/: carrier_robot.hpp  robot.hpp  scanner_robot.hpp  sorter_robot.hpp  support.hpp
lecture8/include/inheritance/: inheritance_demo.hpp
lecture8/include/modern_features/: static_demo.hpp  this_pointer_demo.hpp
lecture8/include/warehouse_robotics/: battery.hpp  carrier_robot.hpp  robot.hpp  scanner_robot.hpp  sorter_robot.hpp  support.hpp  task.hpp
lecture8/src/: carrier_robot.cpp  main.cpp  optional_demo.cpp  robot.cpp  scanner_robot.cpp  sorter_robot.cpp  string_view_demo.cpp
lecture8/src/inheritance/: inheritance_constructor_demo.cpp  inheritance_demo.cpp
lecture8/src/modern_features/: counter.cpp  explicit_demo.cpp  nodiscard_demo.cpp  optional_demo.cpp  static_demo.cpp  string_view_demo.cpp  this_pointer_demo.cpp
lecture8/src/polymorphism/: polymorphism_demo.cpp
lecture8/src/warehouse_robotics/: battery.cpp  carrier_robot.cpp  main.cpp  robot.cpp  scanner_robot.cpp  sorter_robot.cpp  task.cpp
rm/src/: rm.cpp
rwa2_enpm702_summer_2025/include/: sensor_types.hpp
rwa2_enpm702_summer_2025/src/: main.cpp
rwa3_enpm702_summer_2025/src/: main.cpp
rwa4_enpm702_summer_2025/doc/: Doxyfile  mainpage.md
rwa4_enpm702_summer_2025/doc/html/: annotated.html  annotated_dup.js  classes.html  classmaze_1_1MazeControlAPI-members.html  classmaze_1_1MazeControlAPI.html  classmaze_1_1MazeControlAPI.js  dir_0de36e38b49e01e56dca35948941a109.html  dir_0de36e38b49e01e56dca35948941a109.js  dir_0de36e38b49e01e56dca35948941a109_dep.map  dir_0de36e38b49e01e56dca35948941a109_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cb3c48a193c6a3941c226db7e48077af.html  dir_cb3c48a193c6a3941c226db7e48077af_dep.map  dir_cb3c48a193c6a3941c226db7e48077af_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  graph_legend.html  index.html  index.js  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  maze__api_8hpp_source.html  navtreedata.js  navtreeindex0.js
rwa4_enpm702_summer_2025/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
rwa4_enpm702_summer_2025/include/maze_solver/: maze_api.hpp
rwa4_enpm702_summer_2025/src/: main.cpp
rwa4_enpm702_summer_2025/src/maze_solver/: maze_api.cpp
version_control/original/: README.md  robot_config.yaml  sensitive_config.yaml
vscode_scripts/: lock_other_files.txt
